homework01/k8s/02-service.yml
apiVersion: v1
kind: Service
metadata:
  name: simple-client-serv
spec:
  selector:
    app: simple-client
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 8000
  type: ClusterIP
